tests/error/functions-5.moc
void print(char* s) {
}

void main() {
    print("salut ", 7);
}
